--- a/basic-react-app/src/Product.css
+++ b/basic-react-app/src/Product.css
@@ -1,5 +1,5 @@
 .Product{
-    border:  3px solid white ;
+    border:  3px solid black ;
     margin-bottom: 15px;
     border-radius: 14px;
     padding: 0 15px 0 15px;
