--- a/basic-react-app/src/Product.css
+++ b/basic-react-app/src/Product.css
@@ -2,5 +2,8 @@
     border:  3px solid black ;
     margin-bottom: 15px;
     border-radius: 14px;
-    padding: 0 15px 0 15px;
+    /* padding: 0 15px 0 15px; */
+    margin-right: 15px;
+    width: 200px;
+    height: 160px;
 }
